<resources>
    <string name="app_name">aboutme</string>
    <string name="follow_me_on">Follow me on :</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="facebook">Facebook</string>
    <string name="todo">TODO</string>
    <string name="instagramimge">instagramimge</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>